# cpp-atmi

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  Makefile.in  README  README.md  configure  configure.ac  cpp-atmi.spec.in  crust.cfg  doxyconf  doxyfile.in  index.html  params.json  sonar-project.properties  sonar-project.properties.in
api/: Buffers_8h.html  Buffers_8h_source.html  Concurrency_8h.html  Concurrency_8h_source.html  Exceptions_8h.html  Exceptions_8h_source.html  ThreadPool_8h.html  ThreadPool_8h_source.html  Thread_8h.html  Thread_8h_source.html  Tuxedo_8h.html  Tuxedo_8h_source.html  UnixException_8h.html  UnixException_8h_source.html  annotated.html  atmi_09_09_8h.html  atmi_09_09_8h_source.html  atmi__config_8h.html  atmi__config_8h_source.html  classBarrier-members.html  classBarrier.html  classConcurrencyException-members.html  classConcurrencyException.html  classCondition-members.html  classCondition.html  classMutex-members.html  classMutex.html  classPipe-members.html  classPipe.html  classRunnable-members.html  classRunnable.html  classScopedMutex-members.html  classScopedMutex.html  classTestJob-members.html  classTestJob.html  classThread-members.html  classThread.html  classThreadPool-members.html  classThreadPool.html  classUnixException-members.html  (+108 more)
conf/: README  envfile  ubbconfig
doc/html/: abstract__client_8hpp_source.html  annotated.html  atmi_09_09_8hpp_source.html  buffer_8hpp_source.html  buffer_test_8bcl-example.html  buffers_8hpp_source.html  call__info_8hpp_source.html  carray__field_8hpp_source.html  classatmi_1_1_abstract_server-members.html  classatmi_1_1_abstract_server.html  classatmi_1_1_tfield-members.html  classatmi_1_1_tfield.html  classatmi_1_1_tfield_3_01char_01_5_01_4-members.html  classatmi_1_1_tfield_3_01char_01_5_01_4.html  classatmi_1_1_tfield_3_01std_1_1string_01_4-members.html  classatmi_1_1_tfield_3_01std_1_1string_01_4.html  classatmi_1_1_tfield_3_01string_01_4-members.html  classatmi_1_1_tfield_3_01string_01_4.html  classatmi_1_1aborted__exception-members.html  classatmi_1_1aborted__exception.html  classatmi_1_1abstract__client-members.html  classatmi_1_1abstract__client.html  classatmi_1_1abstract__server-members.html  classatmi_1_1abstract__server.html  classatmi_1_1atmi__exception-members.html  classatmi_1_1atmi__exception.html  classatmi_1_1blocking__exception-members.html  classatmi_1_1blocking__exception.html  classatmi_1_1buffer-members.html  classatmi_1_1buffer.html  classatmi_1_1buffer__exception-members.html  classatmi_1_1buffer__exception.html  classatmi_1_1call__info-members.html  classatmi_1_1call__info.html  (+125 more)
html/: AbortedException_8cpp.html  AbstractClient_8cpp.html  AbstractServer_8cpp.html  BlockingException_8cpp.html  BufferException_8cpp.html  Buffer_8cpp.html  Buffers_8h.html  Buffers_8h_source.html  ClientSocket_8cpp.html  Concurrency_8h.html  Concurrency_8h_source.html  Condition_8cpp.html  DiagnosticException_8cpp.html  Event_8cpp.html  Exception_8cpp.html  Exceptions_8h.html  Exceptions_8h_source.html  Field_8cpp.html  InterruptException_8cpp.html  Logger_8cpp.html  Logger_8h.html  Logger_8h_source.html  Mutex_8cpp.html  Network_8h.html  Network_8h_source.html  NomsgException_8cpp.html  Pipe_8cpp.html  QueueStream_8cpp.html  Queue_8cpp.html  ServerSocket_8cpp.html  ServiceException_8cpp.html  Socket_8cpp.html  StandardLogger_8cpp.html  ThreadPool_8cpp.html  ThreadPool_8h.html  ThreadPool_8h_source.html  Thread_8cpp.html  Thread_8h.html  Thread_8h_source.html  TimeoutException_8cpp.html  (+170 more)
include/: Buffers.h  Concurrency.h  Exceptions.h  Logger.h  Network.h  Thread.h  ThreadPool.h  Tuxedo.h  UnixException.h  YamlConfig.h  YamlParser.h  atmi++.h  atmi++.h.in  atmi_config.h.in
lib/: README
samples/app/: deploy  (+3 more)
samples/atmi++/: .travis.yml  ECHO.bsr  Makefile.in  MemTest.c  SIMPSERV++.bsr  SIMPSERV++.func  SIMPSERV.bsr  SIMPSERV.func  Test  Test.C  btest.bcl  configure  configure.ac  crust.cfg  evtest.bcl  exceptions-tests.bcl  fml32.env  mctest.bcl  qexport.bcl  qimport.bcl  qtest.bcl  qwriter.bcl  tptest.bcl  tuxedo.yml
samples/utl/: Makefile.in  configure  configure.ac  crust.cfg  csocket.C  ssocket.C
src/: AbortedException.cpp  AbstractClient.cpp  AbstractServer.cpp  BlockingException.cpp  Buffer.cpp  BufferException.cpp  DiagnosticException.cpp  Event.cpp  Exception.cpp  Field.cpp  InterruptException.cpp  Logger.cpp  Makefile.in  NomsgException.cpp  Queue.cpp  QueueStream.cpp  ServiceException.cpp  StandardLogger.cpp  TimeoutException.cpp  Tp.cpp  Tuxedo.cpp  TuxedoException.cpp  ULOGLogger.cpp  abstract_client.cpp  abstract_server.cpp  atmi++.cpp  atmi++.cpp.in  atmi++en_US.msg  atmi++fr_FR.msg  atmi_exception.cpp  buffer.cpp  call_info.cpp  config.h.in  configure  configure.ac  event.cpp  exceptions.cpp  field.cpp  logger.cpp  queue.cpp  (+8 more)
src/tuxedo/: AbortedException.C  AbstractClient.C  AbstractClient.cpp  Buffer.C  Buffer.cpp  DiagnosticException.C  Event.cpp  Exception.cpp  Field.cpp  InterruptException.cpp  Logger.cpp  Makefile.in  NomsgException.cpp  Queue.cpp  QueueStream.cpp  ServiceException.C  StandardLogger.cpp  TimeoutException.C  Tp.C  Tuxedo.C  Tuxedo.cpp  TuxedoException.cpp  ULOGLogger.cpp  atmi++en_US.msg  atmi++fr_FR.msg  configure  configure.ac
src/utl/: ClientSocket.C  ClientSocket.cpp  Condition.cpp  Makefile.in  Mutex.C  Mutex.cpp  Pipe.C  Pipe.cpp  ServerSocket.C  ServerSocket.cpp  Socket.C  Socket.cpp  Thread.C  Thread.cpp  ThreadPool.cpp  UnixException.cpp  Worker.C  Worker.cpp  YamlConfig.cpp  YamlParser.cpp  configure  configure.ac
tests/clients/: Makefile.in  access.061416  access.061616  buffer_test.bcl  carray_test  carray_test.bcl  configure  configure.ac  evtest.bcl  exceptions_tests.bcl  field_test.bcl  mctest  mctest.bcl  multi_context_test.bcl  queue_test.bcl  sample_fml_table  tptest  tptest.bcl  transaction_test.bcl  ulog_test.bcl
utls/: AUTH_PROXY.bsr  AUTH_PROXY.func  Makefile.in  PROXY.bsr  PROXY.func  configure  configure.ac  decode.bcl  options.hpp  qexport.bcl  qimport.bcl  qwriter.bcl  restart_serv.c  tmreboot.bcl
www/: index.html
(+186 files in other folders)
